# Team.Bio

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  backend.Dockerfile  build.sh  captain-definition-celery  captain-definition-web  celery.Dockerfile  codecov.yml  flower_build.sh  pyproject.toml  requirements.txt  startup.sh
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  test-and-deploy.yml  test_and_deploy.yml
accounts/: admin.py  apps.py  factories.py  forms.py  models.py  utils.py
accounts/migrations/: 0001_initial.py  0002_customuser_company.py  0002_initial.py  0003_alter_user_general_location.py  0003_customuser_profile_picture_customuser_short_bio.py  0004_alter_user_general_location.py  0004_customuser_email_prefix_customuser_email_root.py  0005_auto_20221006_0053.py  0020_pet.py  (+28 more)
billing/: admin.py  factories.py  models.py  tasks.py  urls.py  views.py
companies/: admin.py  context_processors.py  decorators.py  factories.py  forms.py  models.py  tasks.py  urls.py  views.py
config/: context_processors.py  sentry.py  settings.py  sitemaps.py  storage_backends.py  tests.py  urls.py  views.py
pages/: admin.py  feeds.py  models.py  urls.py  utils.py  views.py
scripts/: hourly.sh  monthly.sh
templates/: 403_csrf.html  404.html  500.html  _base.html
trivia/: admin.py  apps.py  factories.py  models.py  tasks.py  urls.py  views.py
utils/: admin.py  ai.py  constants.py  forms.py  images.py  models.py  sms.py  social.py  tasks.py  testcases.py  urls.py  views.py
(+138 files in other folders)
