[tool.poetry]
name = "team-bio"
version = "0.1.0"
description = ""
authors = ["Aaron Spindler <aaron@xnovax.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.28.69"
celery = "^5.3.4"
django-allauth = "^0.57.0"
django-colorfield = "^0.10.1"
django-crispy-forms = "^2.1"
django-debug-toolbar = "^4.2.0"
django-environ = "^0.11.2"
django-redis = "^5.4.0"
django-ses = "^3.5.0"
django-storages = "^1.14.2"
factory-boy = "^3.3.0"
googlemaps = "^4.10.0"
gunicorn = "^21.2.0"
openai = "^0.28.1"
pillow = "^10.1.0"
pillow-heif = "^0.13.1"
pre-commit = "^3.5.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
requests = "^2.31.0"
sentry-sdk = "^1.32.0"
stripe = "^7.0.0"
tldextract = "^5.0.1"
whitenoise = "^6.6.0"
crispy-tailwind = "^0.5.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
